cmake_minimum_required(VERSION 3.29)
project(CCF_CSP)

set(CMAKE_CXX_STANDARD 20)

add_executable(CCF_CSP main.cpp)

add_executable(01-cipintongji 33/01-cipintongji.cpp)

add_executable(01-juzhenchongsu_01 34/01-juzhenchongsu_01.cpp)
add_executable(02-juzhenchongsu_02 34/02-juzhenchongsu_02.cpp)
add_executable(03-wenbenfenci 34/03-wenbenfenci.cpp)
